# diskonaut

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  flake.nix
src/: app.rs  main.rs
src/input/: controls.rs
src/messages/: instruction.rs
src/state/files/: file_or_folder.rs  file_tree.rs
src/state/tiles/: board.rs  rect_float.rs  treemap.rs
src/tests/cases/: test_utils.rs  ui.rs
src/tests/fakes/: fake_output.rs
src/ui/: bottom_line.rs  display.rs  term_too_small.rs
src/ui/grid/: draw_next_symbol.rs  draw_rect.rs  rectangle_grid.rs
src/ui/modals/: confirm_box.rs  error_box.rs  message_box.rs  warning_box.rs
src/ui/title/: title_line.rs  title_telescope.rs
