[package]
name = "diskonaut"
description = "Terminal disk space visual navigator"
version = "0.13.0"
authors = ["Aram Drevekenin <aram@poor.dev>", "Gregory Shuflin <greg@everydayimshuflin.com>"]
readme = "README.md"
homepage = "https://code.everydayimshuflin.com/greg/diskonaut"
repository = "https://code.everydayimshuflin.com/greg/diskonaut"
license = "MIT"
edition = "2024"

[dependencies]
ratatui = {version="0.29", default-features = false, features = ['crossterm'] }
crossterm = "0.29"
anyhow = "1"
jwalk = "0.8"
clap = { version = "4", features = ["derive"] }
filesize = "0.2.0"
unicode-width = "0.2"
nix = { version = "0.30.0", features = ["user"] }
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["securitybaseapi","debugapi"] }

[dev-dependencies]
insta = "1.43"
